--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
 # #H => マシン名
 # #P => ペイン番号
 # ステータスバーを Utf-8 に対応
-set-option -g status-right '#(get_ssid) #(~/scripts/battery Discharging; ~/scripts/battery Charging) [%Y-%m-%d(%a) %H:%M]'
-set-option -g default-shell /bin/bash
+set-option -g status-left-length 50
+set-option -g status-right '#(get_ssid) #(~/scripts/battery Discharging; ~/scripts/battery Charging) [%Y-%m-%d(%a) %H:%M:%S]'
+set-option -g default-shell /bin/zsh
+set-option -g status-interval 1
 
 # User Settings
 set -g prefix C-s
