--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,12 +2,17 @@
 # #P => ペイン番号
 # ステータスバーを Utf-8 に対応
 set-option -g status-left-length 50
-set-option -g status-right '#(get_ssid) #(~/scripts/battery Discharging; ~/scripts/battery Charging) [%Y-%m-%d(%a) %H:%M:%S]'
-set-option -g default-shell /bin/zsh
+set-option -g status-right '#(get_ssid) #(~/scripts/battery Discharging; ~/scripts/battery Charging) #H [%Y-%m-%d(%a) %H:%M:%S]'
+set-option -g default-shell /usr/local/bin/zsh
 set-option -g status-interval 1
 
-# User Settings
-set -g prefix C-s
+# User settings
+set -g status-style ""
+
+# ステータスバーの色を設定する
+
+if-shell "test $USER = 'zenbook'" "set -g prefix C-s" "set -g prefix C-g"
+if-shell "test $USER = 'zenbook'" 'set -g status-style "bg=#555555,fg=white"' 'set -g status-style "bg=#333333,fg=white"'
 
 # キーストロークのディレイを減らす
 set -sg escape-time 1
@@ -25,7 +30,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-a send-prefix
 
 # | でペインを縦に分割する
-bind | split-window -h -p 30 -c "#{pane_current_path}"
+bind | split-window -h -p 40 -c "#{pane_current_path}"
 
 # - でペインを横に分割する
 bind - split-window -v -p 30 -c "#{pane_current_path}"
@@ -63,14 +68,10 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-# マウス操作を有効にする
-setw -g mouse on
 
 # 256色端末を使用する
 # set -g default-terminal "screen-256color"
 
-# ステータスバーの色を設定する
-set -g status-style "bg=black,fg=white"
 
 # ウィンドウリストの色を設定する
 setw -g window-status-style "bg=default,fg=cyan,dim"
@@ -92,6 +93,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -109,6 +111,9 @@ set-window-option -g automatic-rename off # ウィンドウ名が自動的に更
 
 # Copy to clicpboard by mouse dragging
 # https://unix.stackexchange.com/questions/348913/copy-selection-to-a-clipboard-in-tmux
-set-option -g mouse on
+if-shell "test $USER = 'zenbook'" "setw -g mouse on" "setw -g mouse off"
 set-option -s set-clipboard off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+
+bind-key m setw -g mouse on\; display "Mouse is activated!"
+bind-key M setw -g mouse off\; display "Mouse is deactivated!"
