change to use deoplete

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ set-option -g status-right '#(get_ssid) #(~/scripts/battery Discharging; ~/scrip
 set-option -g default-shell /usr/local/bin/zsh
 set-option -g status-interval 1
 
+set-option -g history-limit 100000
+
 # User settings
 set -g status-style ""
 
