--- a/.vim/rc/dein_lazy.toml
+++ b/.vim/rc/dein_lazy.toml
@@ -14,3 +14,46 @@ on_ft = ['sh']
 [[plugins]]
 repo = 'mattn/webapi-vim'
 on_cmd  = ['HatebloCreate']
+
+[[plugins]]
+repo = 'sebastianmarkow/deoplete-rust'
+on_ft = 'rust'
+depends = ['deoplete.nvim']
+hook_source = '''
+    let g:deoplete#sources#rust#racer_binary=systemlist('which racer')[0]
+    let g:deoplete#sources#rust#rust_source_path=systemlist('rustc --print sysroot')[0].'/lib/rustlib/src/rust/src'
+    let $RUST_SRC_PATH=systemlist('rustc --print sysroot')[0].'/lib/rustlib/src/rust/src'
+    let g:deoplete#sources#rust#show_duplicates=1
+    let g:deoplete#sources#rust#disable_keymap=1
+    nmap <buffer> gd <plug>DeopleteRustGoToDefinitionDefault
+    nmap <buffer> K  <plug>DeopleteRustShowDocumentation
+'''
+
+[[plugins]]
+repo = 'racer-rust/vim-racer'
+on_ft = 'rust'
+hook_source = '''
+    let g:racer_cmd = '/home/'.$USER.'/.cargo/bin/racer'
+    let $RUST_SRC_PATH=systemlist('rustc --print sysroot')[0].'/lib/rustlib/src/rust/src'
+'''
+
+[[plugins]]
+repo = 'rust-lang/rust.vim'
+on_ft = 'rust'
+hook_source = '''
+    let g:rustfmt_autosave = 1
+    let g:rust_doc#define_map_K = 0
+'''
+
+# refactoring tool
+[[plugins]]
+on_ft = 'python'
+repo = 'fx-kirin/python-mode'
+
+[[plugins]]
+on_ft = 'python'
+repo = 'lambdalisue/vim-pyenv'
+
+[[plugins]]
+on_ft = 'python'
+repo = 'deoplete-plugins/deoplete-jedi'
