--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,5 +117,7 @@ if-shell "test $USER = 'zenbook'" "setw -g mouse on" "setw -g mouse off"
 set-option -s set-clipboard off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
 
+bind-key 1 swap-pane -t 1
+
 bind-key m setw -g mouse on\; display "Mouse is activated!"
 bind-key M setw -g mouse off\; display "Mouse is deactivated!"
