--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,8 @@ bind | split-window -h -p 40 -c "#{pane_current_path}"
 # - でペインを横に分割する
 bind - split-window -v -p 30 -c "#{pane_current_path}"
 
+bind c new-window -c "#{pane_current_path}"
+
 # vi binding move in visual mode
 set-window-option -g mode-keys vi
 
@@ -118,6 +120,8 @@ set-option -s set-clipboard off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
 
 bind-key 1 swap-pane -t 1
+bind-key 2 swap-pane -t 2
+bind-key 3 swap-pane -t 3
 
 bind-key m setw -g mouse on\; display "Mouse is activated!"
 bind-key M setw -g mouse off\; display "Mouse is deactivated!"
