disabling completor completely

--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -140,4 +140,10 @@ repo = 'Shougo/echodoc.vim'
 repo = 'wellle/tmux-complete.vim'
 
 [[plugins]]
+repo = 'fx-kirin/completor.vim'
+
+[[plugins]]
+repo = 'ferreum/completor-tmux'
+
+[[plugins]]
 repo = 'mbbill/undotree'
