--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,14 +2,20 @@
 # #P => ペイン番号
 # ステータスバーを Utf-8 に対応
 set-option -g status-left-length 50
+set-option -g status-right-length 50
 set-option -g status-right '#(get_ssid) #(~/scripts/battery Discharging; ~/scripts/battery Charging) #H [%Y-%m-%d(%a) %H:%M:%S]'
-set-option -g default-shell /usr/local/bin/zsh
 set-option -g status-interval 1
+set-option -g default-shell /usr/local/bin/zsh
+set -g default-command /usr/local/bin/zsh
+set-option -g history-limit 10000
+set-environment -g RUST_BACKTRACE 1
 
-set-option -g history-limit 100000
+# Read zprofile
+run-shell "cat ~/.zprofile | sed -n 's/export *\\(.*\\)=\\(.*\\)/tmux set-environment -g \\1 \\2/e'"
 
 # User settings
 set -g status-style ""
+
 
 # ステータスバーの色を設定する
 
@@ -74,7 +80,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # 256色端末を使用する
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 
 # ウィンドウリストの色を設定する
@@ -125,3 +131,6 @@ bind-key 3 swap-pane -t 3
 
 bind-key m setw -g mouse on\; display "Mouse is activated!"
 bind-key M setw -g mouse off\; display "Mouse is deactivated!"
+
+# https://github.com/tmux/tmux/issues/2200
+bind-key -T prefix s choose-tree -sOname
