--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
 # ウィンドウリストの色を設定する
