--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -152,3 +152,6 @@ repo = 'machakann/vim-highlightedyank'
 
 [[plugins]]
 repo = 'paulssonkalle/airline-monokai-pro'
+
+[[plugins]]
+repo = 'fx-kirin/completor.vim'
