--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -13,15 +13,15 @@
   <family>sans-serif</family>
   <prefer>
    <family>Sans</family>
-   <family>Noto Sans CJK JP</family>
+   <family>IPAGothic</family>
   </prefer>
  </alias>
 
  <alias>
   <family>monospace</family>
   <prefer>
-   <family>monospace</family>
-   <family>Noto Sans Mono CJK JP</family>
+   <family>DejaVuSansMono</family>
+   <family>IPAPGothic</family>
   </prefer>
  </alias>
 
