--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,6 @@ set -g status-style ""
 
 
 # ステータスバーの色を設定する
-
 if-shell "test $USER = 'zenbook'" "set -g prefix C-s" "set -g prefix C-g"
 if-shell "test $USER = 'zenbook'" 'set -g status-style "bg=#555555,fg=white"' 'set -g status-style "bg=#333333,fg=white"'
 
@@ -41,7 +40,7 @@ bind C-a send-prefix
 bind | split-window -h -p 40 -c "#{pane_current_path}"
 
 # - でペインを横に分割する
-bind - split-window -v -p 30 -c "#{pane_current_path}"
+bind-key - split-window -v -p 30 -c "#{pane_current_path}"
 
 bind c new-window -c "#{pane_current_path}"
 
@@ -80,9 +79,9 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # 256色端末を使用する
-set -g default-terminal "tmux-256color"
+# doesn't work with tmux-256color on 18.04
+set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
 
 # ウィンドウリストの色を設定する
 setw -g window-status-style "bg=default,fg=cyan,dim"
@@ -95,18 +94,18 @@ set -g pane-border-style "bg=black,fg=green"
 # アクティブなペインを目立たせる
 set -g pane-active-border-style "bg=yellow,fg=white"
 
-# コマンドラインの色を設定する
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
-# List of plugins
+## コマンドラインの色を設定する
+##set -g message-fg white
+##set -g message-bg black
+##set -g message-attr bright
+## List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-
-# Other examples:
+#
+## Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
