--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,6 +82,10 @@ bind -r L resize-pane -R 5
 # doesn't work with tmux-256color on 18.04
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+# 正しく下線や波線を使うにはtmux.confに以下のような設定を追記する必要があります。
+# https://kotaro7750.hatenablog.com/entry/tmux_vim_undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # ウィンドウリストの色を設定する
 setw -g window-status-style "bg=default,fg=cyan,dim"
