--- a/.vim/vim/rc/dein_lazy.toml
+++ b/.vim/vim/rc/dein_lazy.toml
@@ -10,7 +10,7 @@ hook_source = '''
 # refactoring tool
 [[plugins]]
 on_ft = 'python'
-repo = 'fx-kirin/python-mode'
+repo = 'python-mode/python-mode'
 
 [[plugins]]
 on_ft = 'python'
@@ -106,3 +106,12 @@ let g:echodoc#enable_at_startup=1
 let g:echodoc#type="floating"
 highlight link EchoDocFloat Pmenu
 '''
+
+[[plugins]]
+on_ft = 'markdown'
+repo = 'godlygeek/tabular'
+
+[[plugins]]
+on_ft = 'markdown'
+depends = ['tabular']
+repo = 'plasticboy/vim-markdown'
