--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,6 @@ run-shell "cat ~/.zprofile | sed -n 's/export *\\(.*\\)=\\(.*\\)/tmux set-enviro
 # User settings
 set -g status-style ""
 
-
 # ステータスバーの色を設定する
 if-shell "test $USER = 'zenbook'" "set -g prefix C-s" "set -g prefix C-g"
 if-shell "test $USER = 'zenbook'" 'set -g status-style "bg=#555555,fg=white"' 'set -g status-style "bg=#333333,fg=white"'
@@ -129,4 +128,4 @@ bind-key M setw -g mouse off\; display "Mouse is deactivated!"
 bind-key -T prefix s choose-tree -sOname
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run-shell '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
