--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,6 +103,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 #
 ## Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -126,6 +127,10 @@ bind-key M setw -g mouse off\; display "Mouse is deactivated!"
 
 # https://github.com/tmux/tmux/issues/2200
 bind-key -T prefix s choose-tree -sOname
+
+# Order
+bind-key -n    C-S-F3 swap-window -t :-1
+bind-key -n    C-S-F4 swap-window -t :+1
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
