--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,6 +104,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'fcsonline/tmux-thumbs'
 #
 ## Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -128,9 +129,8 @@ bind-key M setw -g mouse off\; display "Mouse is deactivated!"
 # https://github.com/tmux/tmux/issues/2200
 bind-key -T prefix s choose-tree -sOname
 
-# Order
-bind-key -n    C-S-F3 swap-window -t :-1
-bind-key -n    C-S-F4 swap-window -t :+1
+# Thumbs
+set -g @thumbs-command 'echo -n {} | xclip -sel clip && tmux display-message "Copied {}"'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
